<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#18b4ed" >

        <com.algha.nur.widget.UyghurTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center"
            android:text="@string/settings"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eee" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

   <!--          <RelativeLayout
                android:id="@+id/CacheClear"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#fff" >

                <com.algha.nur.widget.UyghurTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:gravity="right|center"
                    android:text="@string/cacheclear"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center|center"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/settings_more" />
            </RelativeLayout>   -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/CheckVersion"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="#fff" >

                    <com.algha.nur.widget.UyghurTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="15dp"
                        android:gravity="right|center"
                        android:text="@string/version"
                        android:textColor="#000"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center|center"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerInside"
                        android:src="@drawable/settings_more" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/AboutApp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="1dp"
                    android:background="#fff" >

                    <com.algha.nur.widget.UyghurTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="15dp"
                        android:gravity="right|center"
                        android:text="@string/aboutapp"
                        android:textColor="#000"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center|center"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerInside"
                        android:src="@drawable/settings_more" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/AboutConpany"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="1dp"
                    android:background="#fff" >

                    <com.algha.nur.widget.UyghurTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="15dp"
                        android:gravity="right|center"
                        android:text="@string/aboutcompany"
                        android:textColor="#000"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center|center"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerInside"
                        android:src="@drawable/settings_more" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>